feat: testing projects and skills cards

--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -15,9 +15,13 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
 <Page>
   <Fragment slot="main">
     <About />
+    <hr class="my-2 border-border" />
     <Experience />
+    <hr class="my-2 border-border" />
     <Projects />
+    <hr class="my-2 border-border" />
     <Skills />
+    <hr class="my-2 border-border" />
     <Contact />
   </Fragment>
 </Page>
