--- a/source/modules/sections/about.astro
+++ b/source/modules/sections/about.astro
@@ -65,8 +65,8 @@ const t = translations.sections.about;
   #hero-bg {
     background: radial-gradient(
       125% 125% at 50% 10%,
-      #000 40%,
-      theme("colors.primary.DEFAULT") 100%
+      theme("colors.background") 50%,
+      theme("colors.background") 100%
     );
   }
 </style>
