--- a/source/modules/sections/projects.astro
+++ b/source/modules/sections/projects.astro
@@ -1,4 +1,10 @@
 ---
+import { Image } from "astro:assets";
+
+import myRoomProject from "@app/assets/images/my-room-project.webp";
+import Badge from "@app/ui/components/base/badge.astro";
+import Link from "@app/ui/components/base/link.astro";
+import { Icon } from "astro-icon/components";
 import { useTranslations } from "../i18n/lib/hooks/use-translation";
 
 const translations = useTranslations(Astro.locals.locale);
@@ -12,7 +18,60 @@ const t = translations.sections.projects;
   <h2 class="mb-16 text-6xl font-bold">{t.title}</h2>
 
   <h3 class="text-3xl font-medium">Featured</h3>
-  <ul>
+
+  <article class="rounded-theme border border-border bg-card p-6">
+    <header class="flex justify-between px-2 pb-2">
+      <h4 class="text-2xl font-semibold">My Room In 3D</h4>
+      <ul class="flex items-center gap-4">
+        <li>
+          <Link
+            href="https://github.com/iivvaannxx/my-room"
+            label="github-link"
+            targetBlank
+          >
+            <Icon name="lucide:github" class="size-6" />
+          </Link>
+        </li>
+
+        <li>
+          <Link href="https://my-room.pages.dev" label="live-link" targetBlank>
+            <Icon name="lucide:external-link" class="size-6" />
+          </Link>
+        </li>
+      </ul>
+    </header>
+    <hr class="mb-4 border-border" />
+    <Image
+      src={myRoomProject}
+      alt="Cover image for My Room In 3D"
+      class="rounded-lg"
+      width={600}
+    />
+    <p class="mt-2 px-2 text-lg font-medium">
+      <span class="relative bottom-1 mr-2">🛏️</span>
+      <span>A (quite bit more) fancy replica of my room. </span>
+    </p>
+    <footer class="mt-4 flex gap-2">
+      <Badge class="space-x-2 px-4 py-2 font-semibold">
+        <Icon name="skills/git" class="size-4" />
+        <span>Git</span>
+      </Badge>
+      <Badge class="space-x-2 px-4 py-2 font-semibold">
+        <Icon name="skills/blender" class="size-4" />
+        <span>Blender</span>
+      </Badge>
+      <Badge class="space-x-2 px-4 py-2 font-semibold">
+        <Icon name="skills/typescript" class="size-4" />
+        <span>TypeScript</span>
+      </Badge>
+      <Badge class="space-x-2 px-4 py-2 font-semibold">
+        <Icon name="skills/threejs" class="size-4" />
+        <span>Three.js</span>
+      </Badge>
+    </footer>
+  </article>
+
+  <!--   <ul>
     <li>Room</li>
     <li>Home Manager</li>
     <li>Link Shortener</li>
@@ -32,5 +91,5 @@ const t = translations.sections.projects;
     <li>Plataformes (Web)</li>
     <li>Sense Quiz</li>
     <li>VR Fruit Ninja</li>
-  </ul>
+  </ul> -->
 </section>
