--- a/source/modules/sections/skills.astro
+++ b/source/modules/sections/skills.astro
@@ -2,6 +2,7 @@
 import { skills } from "@app/assets/data/skills";
 import SkillCard from "@app/ui/components/skill-card.astro";
 import { useTranslations } from "../i18n/lib/hooks/use-translation";
+import { Example } from "../three-fiber/components/example";
 
 const translations = useTranslations(Astro.locals.locale);
 const t = translations.sections.skills;
@@ -13,8 +14,14 @@ const t = translations.sections.skills;
 >
   <h2 class="mb-16 text-6xl font-bold">{t.title}</h2>
 
-  <div class="grid grid-cols-4 gap-4">
-    {skills.map((skill) => <SkillCard {...skill} variant="default" />)}
+  <div class="flex flex-col-reverse items-center justify-center gap-8">
+    <div class="size-96">
+      <Example client:load />
+    </div>
+
+    <div class="grid grid-cols-4 gap-4">
+      {skills.map((skill) => <SkillCard {...skill} variant="default" />)}
+    </div>
   </div>
 
   <h3 class="text-3xl font-medium">Games</h3>
