--- a/source/modules/sections/about.astro
+++ b/source/modules/sections/about.astro
@@ -1,8 +1,8 @@
 ---
-import { useTranslations } from "@app/modules/i18n/lib/hooks/use-translation";
+import { getTranslations } from "@app/modules/i18n/lib/translations";
 import UserLocation from "@app/ui/components/user-location.astro";
 
-const translations = useTranslations(Astro.locals.locale);
+const translations = getTranslations(Astro.locals.locale);
 const t = translations.sections.about;
 ---
 
