--- a/source/ui/components/base/card.astro
+++ b/source/ui/components/base/card.astro
@@ -1,17 +1,17 @@
 ---
 import { cn } from "@app/utils/style";
-import type { HTMLAttributes } from "astro/types";
+import type { Polymorphic } from "astro/types";
 
-export type Props = HTMLAttributes<"div">;
-const { class: clazz, ...props } = Astro.props;
+type Props<Tag extends "div" | "article"> = Polymorphic<{ as: Tag }>;
+const { as: Tag = "div", class: clazz, ...props } = Astro.props;
 ---
 
-<div
+<Tag
   class={cn(
-    "flex flex-col items-center justify-center rounded-md border border-border bg-card p-4",
+    "flex flex-col justify-center rounded-theme border border-border bg-card p-4",
     clazz,
   )}
   {...props}
 >
   <slot />
-</div>
+</Tag>
