--- a/source/ui/components/social-sidelist.astro
+++ b/source/ui/components/social-sidelist.astro
@@ -2,9 +2,9 @@
 import Link from "@app/ui/components/base/link.astro";
 import { socials } from "@app/assets/data/socials";
 
-import { useTranslations } from "@app/modules/i18n/lib/hooks/use-translation";
+import { getTranslations } from "@app/modules/i18n/lib/translations";
 
-const translations = useTranslations(Astro.locals.locale);
+const translations = getTranslations(Astro.locals.locale);
 const t = translations.socials;
 ---
 
