--- a/source/modules/sections/experience.astro
+++ b/source/modules/sections/experience.astro
@@ -1,4 +1,5 @@
 ---
+import SkillBadge from "@app/components/skill-badge.astro";
 import { getTranslations } from "../i18n/lib/translations";
 
 const translations = getTranslations(Astro.locals.locale);
@@ -11,40 +12,42 @@ const t = translations.sections.experience;
 >
   <h2 class="mb-16 text-6xl font-bold">{t.title}</h2>
 
-  <div class="-my-6">
-    <!-- Item #1 -->
+  <div class="-my-6 max-w-[80%]">
     <div class="group relative py-6 pl-8 sm:pl-32">
-      <!-- Purple label -->
-      <div class="mb-1 font-sans text-2xl font-medium text-primary sm:mb-0">
-        The origin
-      </div>
-      <!-- Vertical line (::before) ~ Date ~ Title ~ Circle marker (::after) -->
+      <h3 class="mb-1 font-sans text-2xl font-medium text-primary sm:mb-0">
+        Computer Science Educator for Kids and Teens
+      </h3>
       <div
         class="mb-1 flex flex-col items-start before:absolute before:left-2 before:h-full before:-translate-x-1/2 before:translate-y-3 before:self-start before:bg-muted before:px-px after:absolute after:left-2 after:box-content after:size-2 after:-translate-x-1/2 after:translate-y-1.5 after:rounded-full after:border-4 after:bg-primary group-last:before:hidden sm:flex-row sm:before:left-0 sm:before:ml-[6.5rem] sm:after:left-0 sm:after:ml-[6.5rem]"
       >
         <time
           class="left-0 mb-3 inline-flex h-6 w-20 translate-y-0.5 items-center justify-center rounded-full bg-accent text-xs font-semibold uppercase text-accent-foreground sm:absolute sm:mb-0"
         >
-          May, 2020
+          NOV 2021
         </time>
+
         <div class="text-xl font-bold text-foreground/40">
-          Acme was founded in Milan, Italy
+          Codelearn SL, Barcelona, Spain
         </div>
       </div>
-      <!-- Content -->
       <div class="text-balance text-foreground/80">
-        Pretium lectus quam id leo. Urna et pharetra pharetra massa massa.
-        Adipiscing enim eu neque aliquam vestibulum morbi blandit cursus risus.
+        Enabled immersive learning of diverse computer science topics, ranging from introductory to advanced levels, for 20+ weekly students, leveraging gamification via an e-learning platform.
       </div>
+
+      <ul class="flex gap-2">
+        <li>
+          <SkillBadge skill="python" />
+        </li>
+        <li>
+          <SkillBadge skill="bash" />
+        </li>
+      </ul>
     </div>
 
-    <!-- Item #2 -->
-    <div class="group relative py-6 pl-8 sm:pl-32">
-      <!-- Purple label -->
-      <div class="mb-1 font-sans text-2xl font-medium text-primary sm:mb-0">
-        The milestone
-      </div>
-      <!-- Vertical line (::before) ~ Date ~ Title ~ Circle marker (::after) -->
+    <div class="group relative py-6 pl-8 sm:pl-32 ">
+      <h3 class="mb-1 font-sans text-2xl font-medium text-primary sm:mb-0">
+        Serious Game Developer
+      </h3>
       <div
         class="mb-1 flex flex-col items-start before:absolute before:left-2 before:h-full before:-translate-x-1/2 before:translate-y-3 before:self-start before:bg-muted before:px-px after:absolute after:left-2 after:box-content after:size-2 after:-translate-x-1/2 after:translate-y-1.5 after:rounded-full after:border-4 after:bg-primary group-last:before:hidden sm:flex-row sm:before:left-0 sm:before:ml-[6.5rem] sm:after:left-0 sm:after:ml-[6.5rem]"
       >
@@ -54,13 +57,11 @@ const t = translations.sections.experience;
           May, 2021
         </time>
         <div class="text-xl font-bold text-foreground/40">
-          Reached 5K customers
+          GILAB (University of Girona), Girona, Spain
         </div>
       </div>
-      <!-- Content -->
       <div class="text-balance text-foreground/80">
-        Pretium lectus quam id leo. Urna et pharetra pharetra massa massa.
-        Adipiscing enim eu neque aliquam vestibulum morbi blandit cursus risus.
+        Pretium lectus quam id leo. Urna et pharetra pharetra massa massa. Adipiscing enim eu neque aliquam vestibulum morbi blandit cursus risus.
       </div>
     </div>
   </div>
