--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -1,10 +1,10 @@
 ---
+import Page from "@app/layouts/page.astro";
 import About from "@app/modules/sections/about.astro";
 import Contact from "@app/modules/sections/contact.astro";
 import Experience from "@app/modules/sections/experience.astro";
 import Projects from "@app/modules/sections/projects.astro";
 import Skills from "@app/modules/sections/skills.astro";
-import Page from "@app/ui/layouts/page.astro";
 
 import { getLocalizedStaticPaths } from "@app/modules/i18n/lib/locales";
 import type { GetStaticPaths } from "astro";
