--- a/source/layouts/base.astro
+++ b/source/layouts/base.astro
@@ -12,7 +12,9 @@ import "tippy.js/dist/tippy.css";
     <link rel="sitemap" href="/sitemap-index.xml" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+    <script is:inline src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+    <script src="@app/polyfills.ts"></script>
+
     <slot name="head" />
 
   </head>
