--- a/source/sections/projects.astro
+++ b/source/sections/projects.astro
@@ -1,7 +1,7 @@
 ---
 import MyRoomImage from "@app/assets/images/my-room-project.webp";
 import ProjectCard from "@app/components/project-card.astro";
-import { getTranslations } from "../i18n/lib/translations";
+import { getTranslations } from "@app/modules/i18n/lib/translations";
 
 const translations = getTranslations(Astro.locals.locale);
 const t = translations.sections.projects;
