--- a/source/sections/contact.astro
+++ b/source/sections/contact.astro
@@ -1,6 +1,6 @@
 ---
 import Input from "@app/components/base/input.astro";
-import { getTranslations } from "../i18n/lib/translations";
+import { getTranslations } from "@app/modules/i18n/lib/translations";
 
 const translations = getTranslations(Astro.locals.locale);
 const t = translations.sections.contact;
