--- a/source/sections/experience.astro
+++ b/source/sections/experience.astro
@@ -1,6 +1,8 @@
 ---
+import Link from "@app/components/base/link.astro";
 import SkillBadge from "@app/components/skill-badge.astro";
-import { getTranslations } from "../i18n/lib/translations";
+import { getTranslations } from "@app/modules/i18n/lib/translations";
+import { Icon } from "astro-icon/components";
 
 const translations = getTranslations(Astro.locals.locale);
 const t = translations.sections.experience;
@@ -10,7 +12,10 @@ const t = translations.sections.experience;
   id={t.id}
   class="container mx-auto flex w-full flex-col items-center p-12"
 >
-  <h2 class="mb-16 text-6xl font-bold">{t.title}</h2>
+  <h2 class="relative mb-16 text-left">
+    <span class="font-mono text-3xl font-semibold tabular-nums">01.</span>
+    <span class="pl-4 text-6xl font-black">{t.title}</span>
+  </h2>
 
   <div class="-my-6 max-w-[80%]">
     <div class="group relative py-6 pl-8 sm:pl-32">
@@ -26,9 +31,13 @@ const t = translations.sections.experience;
           NOV 2021
         </time>
 
-        <div class="text-xl font-bold text-foreground/40">
-          Codelearn SL, Barcelona, Spain
-        </div>
+        <h4 class="text-xl font-bold text-foreground/40">
+          <Link targetBlank href="https://codelearn.com" class="flex" label="Codelearn">
+            <span>Codelearn SL</span>
+            <Icon name="lucide:arrow-up-right" />
+          </Link>
+          <span>Barcelona, Spain</span>
+        </h4>
       </div>
       <div class="text-balance text-foreground/80">
         Enabled immersive learning of diverse computer science topics, ranging from introductory to advanced levels, for 20+ weekly students, leveraging gamification via an e-learning platform.
@@ -46,7 +55,7 @@ const t = translations.sections.experience;
 
     <div class="group relative py-6 pl-8 sm:pl-32 ">
       <h3 class="mb-1 font-sans text-2xl font-medium text-primary sm:mb-0">
-        Serious Game Developer
+        Unity Game Developer
       </h3>
       <div
         class="mb-1 flex flex-col items-start before:absolute before:left-2 before:h-full before:-translate-x-1/2 before:translate-y-3 before:self-start before:bg-muted before:px-px after:absolute after:left-2 after:box-content after:size-2 after:-translate-x-1/2 after:translate-y-1.5 after:rounded-full after:border-4 after:bg-primary group-last:before:hidden sm:flex-row sm:before:left-0 sm:before:ml-[6.5rem] sm:after:left-0 sm:after:ml-[6.5rem]"
@@ -63,6 +72,31 @@ const t = translations.sections.experience;
       <div class="text-balance text-foreground/80">
         Pretium lectus quam id leo. Urna et pharetra pharetra massa massa. Adipiscing enim eu neque aliquam vestibulum morbi blandit cursus risus.
       </div>
+      <ul class="flex gap-2">
+        <li>
+          <SkillBadge skill="unity" />
+        </li>
+        <li>
+          <SkillBadge skill="csharp" name="C#" />
+        </li>
+      </ul>
     </div>
   </div>
 </section>
+
+<style>
+
+  h2::before {
+
+    content: "";
+    position: absolute;
+    display: block;
+
+    height: 2px;
+    width: 2rem;
+
+    inset-block: 0;
+    background-color: theme("colors.foreground");
+  }
+
+</style>
