--- a/source/sections/skills.astro
+++ b/source/sections/skills.astro
@@ -1,8 +1,8 @@
 ---
 import { skills } from "@app/assets/data/skills";
 import SkillCard from "@app/components/skill-card.astro";
-import { getTranslations } from "../i18n/lib/translations";
-import { Example } from "../three-fiber/components/example";
+import { getTranslations } from "@app/modules/i18n/lib/translations";
+import { Example } from "@app/modules/three-fiber/components/example";
 
 const translations = getTranslations(Astro.locals.locale);
 const t = translations.sections.skills;
@@ -16,8 +16,7 @@ const t = translations.sections.skills;
 
   <div class="flex flex-col-reverse items-center justify-center gap-8">
     <div class="size-96">
-            <Example client:idle />
-
+      <Example client:idle />
     </div>
 
     <div class="grid grid-cols-4 gap-4">
