--- a/source/assets/styles/fonts.css
+++ b/source/assets/styles/fonts.css
@@ -11,6 +11,18 @@
 }
 
 @font-face {
+  font-family: "Onest";
+  src:
+    url("/fonts/onest/onest.woff2") format("woff2"),
+    url("/fonts/onest/onest.woff") format("woff"),
+    url("/fonts/onest/onest.ttf") format("truetype");
+
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "Monaspace Neon";
   src:
     url("/fonts/monaspace/monaspace-neon.woff2") format("woff2"),
