--- a/source/sections/about.astro
+++ b/source/sections/about.astro
@@ -15,7 +15,7 @@ const t = translations.sections.about;
     class="absolute inset-0 -z-10 size-full items-center px-5 py-24"
   >
   </div>
-  <div class="container mx-auto mb-16 flex flex-col p-12 text-left">
+  <div class="container mx-auto mb-16 flex flex-col p-12 text-left font-header">
     <h1 class="block">
       <span class="block text-5xl font-semibold text-foreground/50">
         {t.greeting}
