--- a/source/sections/experience.astro
+++ b/source/sections/experience.astro
@@ -14,7 +14,7 @@ const t = translations.sections.experience;
 >
   <h2 class="relative mb-16 text-left">
     <span class="font-mono text-3xl font-semibold tabular-nums">01.</span>
-    <span class="pl-4 text-6xl font-black">{t.title}</span>
+    <span class="pl-4 font-header text-6xl font-extrabold tracking-wide">{t.title}</span>
   </h2>
 
   <div class="-my-6 max-w-[80%]">
