refactor: run prettier on project

--- a/source/components/base/link.astro
+++ b/source/components/base/link.astro
@@ -31,7 +31,7 @@ const optionalAttrs = {
   {...props}
   {...optionalAttrs}
   aria-label={label}
-  href={href}
+  {href}
   rel="noopener noreferrer"
 >
   <slot />
