--- a/source/components/skill-card.astro
+++ b/source/components/skill-card.astro
@@ -15,8 +15,15 @@ export type Props = {
 const { name, icon, categories, variant = "default" } = Astro.props;
 ---
 
-<Card as="div" class="items-center px-4 py-8">
-  <Icon name={`skills/${icon}`} width={48} height={48} />
+<Card
+  as="div"
+  class="items-center px-4 py-8"
+>
+  <Icon
+    name={`skills/${icon}`}
+    width={48}
+    height={48}
+  />
 
   {
     variant === "default" && (
