--- a/source/modules/navigation/components/nav-links.astro
+++ b/source/modules/navigation/components/nav-links.astro
@@ -16,7 +16,10 @@ const t = translations.sections;
     {
       sections.map((section) => (
         <li>
-          <Link href={`#${t[section].id}`} label={section}>
+          <Link
+            href={`#${t[section].id}`}
+            label={section}
+          >
             {t[section].name}
           </Link>
         </li>
