--- a/source/sections/experience.astro
+++ b/source/sections/experience.astro
@@ -32,7 +32,12 @@ const t = translations.sections.experience;
         </time>
 
         <h4 class="text-xl font-bold text-foreground/40">
-          <Link targetBlank href="https://codelearn.com" class="flex" label="Codelearn">
+          <Link
+            targetBlank
+            href="https://codelearn.com"
+            class="flex"
+            label="Codelearn"
+          >
             <span>Codelearn SL</span>
             <Icon name="lucide:arrow-up-right" />
           </Link>
@@ -40,7 +45,9 @@ const t = translations.sections.experience;
         </h4>
       </div>
       <div class="text-balance text-foreground/80">
-        Enabled immersive learning of diverse computer science topics, ranging from introductory to advanced levels, for 20+ weekly students, leveraging gamification via an e-learning platform.
+        Enabled immersive learning of diverse computer science topics, ranging from
+        introductory to advanced levels, for 20+ weekly students, leveraging gamification
+        via an e-learning platform.
       </div>
 
       <ul class="flex gap-2">
@@ -53,7 +60,7 @@ const t = translations.sections.experience;
       </ul>
     </div>
 
-    <div class="group relative py-6 pl-8 sm:pl-32 ">
+    <div class="group relative py-6 pl-8 sm:pl-32">
       <h3 class="mb-1 font-sans text-2xl font-medium text-primary sm:mb-0">
         Unity Game Developer
       </h3>
@@ -70,14 +77,18 @@ const t = translations.sections.experience;
         </div>
       </div>
       <div class="text-balance text-foreground/80">
-        Pretium lectus quam id leo. Urna et pharetra pharetra massa massa. Adipiscing enim eu neque aliquam vestibulum morbi blandit cursus risus.
+        Pretium lectus quam id leo. Urna et pharetra pharetra massa massa. Adipiscing enim
+        eu neque aliquam vestibulum morbi blandit cursus risus.
       </div>
       <ul class="flex gap-2">
         <li>
           <SkillBadge skill="unity" />
         </li>
         <li>
-          <SkillBadge skill="csharp" name="C#" />
+          <SkillBadge
+            skill="csharp"
+            name="C#"
+          />
         </li>
       </ul>
     </div>
@@ -85,9 +96,7 @@ const t = translations.sections.experience;
 </section>
 
 <style>
-
   h2::before {
-
     content: "";
     position: absolute;
     display: block;
@@ -98,5 +107,4 @@ const t = translations.sections.experience;
     inset-block: 0;
     background-color: theme("colors.foreground");
   }
-
 </style>
