--- a/source/assets/styles/index.css
+++ b/source/assets/styles/index.css
@@ -7,7 +7,6 @@
 @tailwind utilities;
 
 [data-reveal] {
-
   animation: reveal linear both;
   animation-iteration-count: 1;
 
@@ -16,7 +15,10 @@
 }
 
 @keyframes reveal {
-
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
