--- a/source/components/skill-badge.astro
+++ b/source/components/skill-badge.astro
@@ -11,6 +11,9 @@ const { skill, name = skill } = Astro.props;
 ---
 
 <Badge class="space-x-2 px-4 py-2 font-semibold capitalize">
-  <Icon name={`skills/${skill}`} class="size-4" />
+  <Icon
+    name={`skills/${skill}`}
+    class="size-4"
+  />
   <span>{name}</span>
 </Badge>
