--- a/source/components/social-sidelist.astro
+++ b/source/components/social-sidelist.astro
@@ -19,14 +19,26 @@ const t = translations.socials;
   });
 </script>
 
-<ul id="socials" class="flex w-full flex-col items-center gap-y-8">
+<ul
+  id="socials"
+  class="flex w-full flex-col items-center gap-y-8"
+>
   {
     socials.map(({ href, i18nKey: key, size = 28, Icon }) => {
       const translatedLabel = t[key] as string;
       return (
         <li>
-          <Link {href} label={translatedLabel} withTooltip targetBlank>
-            <Icon fill="white" width={size} height={size} />
+          <Link
+            {href}
+            label={translatedLabel}
+            withTooltip
+            targetBlank
+          >
+            <Icon
+              fill="white"
+              width={size}
+              height={size}
+            />
           </Link>
         </li>
       );
