--- a/source/layouts/base.astro
+++ b/source/layouts/base.astro
@@ -4,19 +4,36 @@ import "tippy.js/animations/scale.css";
 import "tippy.js/dist/tippy.css";
 ---
 
-<html lang={Astro.locals.locale} class="dark">
+<html
+  lang={Astro.locals.locale}
+  class="dark"
+>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
 
-    <link rel="sitemap" href="/sitemap-index.xml" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="sitemap"
+      href="/sitemap-index.xml"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon.svg"
+    />
 
-    <script is:inline src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+    <script
+      is:inline
+      src="https://challenges.cloudflare.com/turnstile/v0/api.js"
+      async
+      defer
+    ></script>
     <script src="@app/polyfills.ts"></script>
 
     <slot name="head" />
-
   </head>
 
   <body
