--- a/source/sections/contact.astro
+++ b/source/sections/contact.astro
@@ -22,13 +22,35 @@ const t = translations.sections.contact;
 >
   <h2 class="mb-16 text-6xl font-bold">{t.title}</h2>
 
-  <form id="contact-form" class="justify-center-center grid grid-cols-2 gap-4">
-    <Input type="text" placeholder="John Doe" />
-    <Input type="text" placeholder="Subject" />
-    <Input type="email" placeholder="your.email@gmail.com" class="col-span-2" />
-    <Input placeholder="Your message" class="col-span-2" rows="5" multiline />
+  <form
+    id="contact-form"
+    class="justify-center-center grid grid-cols-2 gap-4"
+  >
+    <Input
+      type="text"
+      placeholder="John Doe"
+    />
+    <Input
+      type="text"
+      placeholder="Subject"
+    />
+    <Input
+      type="email"
+      placeholder="your.email@gmail.com"
+      class="col-span-2"
+    />
+    <Input
+      placeholder="Your message"
+      class="col-span-2"
+      rows="5"
+      multiline
+    />
 
-    <div class="cf-turnstile" data-sitekey="0x4AAAAAAAMvB2JUUxIcQ2Y8"></div>
+    <div
+      class="cf-turnstile"
+      data-sitekey="0x4AAAAAAAMvB2JUUxIcQ2Y8"
+    >
+    </div>
     <button
       type="submit"
       value="Send"
