--- a/source/sections/experience.astro
+++ b/source/sections/experience.astro
@@ -14,7 +14,9 @@ const t = translations.sections.experience;
 >
   <h2 class="relative mb-16 text-left">
     <span class="font-mono text-3xl font-semibold tabular-nums">01.</span>
-    <span class="pl-4 font-header text-6xl font-extrabold tracking-wide">{t.title}</span>
+    <span class="pl-4 font-header text-6xl font-extrabold tracking-wide">
+      {t.title}
+    </span>
   </h2>
 
   <div class="-my-6 max-w-[80%]">
@@ -45,9 +47,9 @@ const t = translations.sections.experience;
         </h4>
       </div>
       <div class="text-balance text-foreground/80">
-        Enabled immersive learning of diverse computer science topics, ranging from
-        introductory to advanced levels, for 20+ weekly students, leveraging gamification
-        via an e-learning platform.
+        Enabled immersive learning of diverse computer science topics, ranging
+        from introductory to advanced levels, for 20+ weekly students,
+        leveraging gamification via an e-learning platform.
       </div>
 
       <ul class="flex gap-2">
@@ -77,8 +79,8 @@ const t = translations.sections.experience;
         </div>
       </div>
       <div class="text-balance text-foreground/80">
-        Pretium lectus quam id leo. Urna et pharetra pharetra massa massa. Adipiscing enim
-        eu neque aliquam vestibulum morbi blandit cursus risus.
+        Pretium lectus quam id leo. Urna et pharetra pharetra massa massa.
+        Adipiscing enim eu neque aliquam vestibulum morbi blandit cursus risus.
       </div>
       <ul class="flex gap-2">
         <li>
